force-app/main/default/objects/tc9_pr__Assignment_Rate__c/tc9_pr__Assignment_Rate__c.object-meta.xml
<CustomObject>
    <label>Assignment Rate</label>
    <nameField>
        <displayFormat>AR-{0000000000}</displayFormat>
        <label>Assignment Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>