force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_core__Agreement__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Agreement linked to this Assignment Rate.</description>
    <inlineHelpText>The related Agreement linked to this Assignment Rate.</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>tc9_core__Agreement__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>