force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_core__Base_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Base_Pay_Rate__c</fullName>
    <description>Populated by the Agreement Rates Calculator with the calculated base pay rate.</description>
    <inlineHelpText>Populated by the Agreement Rates Calculator with the calculated base pay rate.</inlineHelpText>
    <label>Base Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>