force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_core__Casual_Loading_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Casual_Loading_Amount__c</fullName>
    <description>Populated by the Agreement Rates Calculator with the calculated casual loading amount.</description>
    <inlineHelpText>Populated by the Agreement Rates Calculator with the calculated casual loading amount.</inlineHelpText>
    <label>Casual Loading Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>