force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_core__Employment_Cost_10_Pay_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Employment_Cost_10_Pay_Amount__c</fullName>
    <description>Populated by the Agreements Rates Calculator with the payable amount for Employment Cost 10.</description>
    <inlineHelpText>Populated by the Agreements Rates Calculator with the payable amount for Employment Cost 10.</inlineHelpText>
    <label>Employment Cost 10 Pay Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>