force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_core__Employment_Cost_11_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Employment_Cost_11_Invoice_Amount__c</fullName>
    <description>Populated by the Agreements Rates Calculator with the invoiceable amount for Employment Cost 11.</description>
    <inlineHelpText>Populated by the Agreements Rates Calculator with the invoiceable amount for Employment Cost 11.</inlineHelpText>
    <label>Employment Cost 11 Invoice Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>