force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_core__Multiplied_Base_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Multiplied_Base_Pay_Rate__c</fullName>
    <description>Populated by the Agreement Rates Calculator; calculated as Base Pay Rate × Pay Rate Multiplier.</description>
    <inlineHelpText>Populated by the Agreement Rates Calculator; calculated as Base Pay Rate × Pay Rate Multiplier.</inlineHelpText>
    <label>Multiplied Base Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>