force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_core__Pay_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Pay_Rate_Multiplier__c</fullName>
    <description>Populated by the Agreement Rates Calculator with the pay rate multiplier from the related Pay Code.</description>
    <inlineHelpText>Populated by the Agreement Rates Calculator with the pay rate multiplier from the related Pay Code.</inlineHelpText>
    <label>Pay Rate Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>