force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__AR_Template_Group_Assignment_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__AR_Template_Group_Assignment_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignment Rate Template Group Assignment Rate that created this Assignment Rate via the MPR Automation process.</description>
    <inlineHelpText>The Assignment Rate Template Group Assignment Rate that created this Assignment Rate via the MPR Automation process.</inlineHelpText>
    <label>AR Template Group Assignment Rate</label>
    <referenceTo>tc9_pr__Assignment_Rate__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>