force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Back_Pay_Action__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Back_Pay_Action__c</fullName>
    <description>Indicates which Assignment Rate action requires back pay calculation</description>
    <inlineHelpText>Indicates which Assignment Rate action requires back pay calculation</inlineHelpText>
    <label>Back Pay Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Back_Pay_Action</valueSetName>
    </valueSet>
</CustomField>