force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Back_Pay_Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Back_Pay_Calculation_Status__c</fullName>
    <description>Indicates the status of this Assignment Rate record within the automated back pay calculation process.</description>
    <inlineHelpText>Indicates the status of this Assignment Rate record within the automated back pay calculation process.</inlineHelpText>
    <label>Back Pay Calculation Status(DO NOT USE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Back_Pay_Calculation_Status</valueSetName>
    </valueSet>
</CustomField>