force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Back_Pay_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Back_Pay_End_Date__c</fullName>
    <description>The end date of the back pay period</description>
    <inlineHelpText>The end date of the back pay period</inlineHelpText>
    <label>Back Pay End Date</label>
    <type>Date</type>
</CustomField>