force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Back_Pay_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Back_Pay_Start_Date__c</fullName>
    <description>The start date of the back pay period.</description>
    <inlineHelpText>The start date of the back pay period.</inlineHelpText>
    <label>Back Pay Start Date</label>
    <type>Date</type>
</CustomField>