force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Back_Pay_To_Be_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Back_Pay_To_Be_Invoiced__c</fullName>
    <description>Indicates whether related back pay transactions can be invoiced.  If ‘No’, the credit/rebill process would be required. If’ Yes’, the back pay transactions can be invoiced.</description>
    <inlineHelpText>Indicates whether related back pay transactions can be invoiced.  If ‘No’, the credit/rebill process would be required. If’ Yes’, the back pay transactions can be invoiced.</inlineHelpText>
    <label>Back Pay To Be Invoiced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>