force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Created_by_AR_Automation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Created_by_AR_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System flag to indicate that this Assignment Rate as generated via a Time2Pay product automation process</description>
    <inlineHelpText>System flag to indicate that this Assignment Rate as generated via a Time2Pay product automation process</inlineHelpText>
    <label>Created by AR Automation</label>
    <type>Checkbox</type>
</CustomField>