force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Detailed_Info_System_Only__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Detailed_Info_System_Only__c</fullName>
    <description>System use only for the MPR process to manage creation of assignment rates</description>
    <formula>IF(tc9_et__Project_Code__c != NULL, tc9_et__Project_Code__r.Name, &quot;...&quot;)+ IF(tc9_et__Timesheet_Activity__c != NULL, tc9_et__Timesheet_Activity__r.Name, &quot;...&quot;)</formula>
    <inlineHelpText>System use only for the MPR process to manage creation of assignment rates</inlineHelpText>
    <label>Detailed Info (System Only)</label>
    <type>Text</type>
</CustomField>