force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Exclude_From_Back_Pay__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exclude_From_Back_Pay__c</fullName>
    <description>Indicates whether this Assignment Rate record should be included in the automated back pay calculation process.</description>
    <inlineHelpText>Indicates whether this Assignment Rate record should be included in the automated back pay calculation process.</inlineHelpText>
    <label>Exclude From Back Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>