force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Has_Pending_Assignment_to_be_processed__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Has_Pending_Assignment_to_be_processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates  if the assignment has pending assignment rates to be created as part of scheduled job</description>
    <inlineHelpText>Indicates  if the assignment has pending assignment rates to be created as part of scheduled job</inlineHelpText>
    <label>Has Pending Assignment to be processed</label>
    <type>Checkbox</type>
</CustomField>