force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Invoice_Alone__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Alone__c</fullName>
    <description>Defines if Pay Transaction resulting from the Assignment Rate should be included on their own invoice regardless of the Invoice Group By used</description>
    <inlineHelpText>Defines if Pay Transaction resulting from the Assignment Rate should be included on their own invoice regardless of the Invoice Group By used</inlineHelpText>
    <label>Invoice Alone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>