force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Invoice_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Rate__c</fullName>
    <description>The Invoice Rate (exclusive of invoice tax) that will be used in invoicing Pay Transactions creating using this Assignment Rate</description>
    <inlineHelpText>The Invoice Rate (exclusive of invoice tax) that will be used in invoicing Pay Transactions creating using this Assignment Rate</inlineHelpText>
    <label>Invoice Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>