force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Invoice_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Tax_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Invoice Tax ID that applies to the Assignment Rate</description>
    <inlineHelpText>Defines the Invoice Tax ID that applies to the Assignment Rate</inlineHelpText>
    <label>Invoice Tax ID</label>
    <referenceTo>tc9_et__Invoice_Tax_ID__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>