force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Invoice_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Tax_Rate__c</fullName>
    <description>The Invoice Tax Rate that will be used for invoicing Pay Transactions creating using this Assignment Rate. Derived from the related Invoice Tax ID record</description>
    <formula>if (text( tc9_et__Invoice_Taxable__c )=&quot;Yes&quot;,  tc9_et__Invoice_Tax_ID__r.tc9_et__Tax_Rate__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Invoice Tax Rate that will be used for invoicing Pay Transactions creating using this Assignment Rate. Derived from the related Invoice Tax ID record</inlineHelpText>
    <label>Invoice Tax Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>