force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Invoice_Taxable__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Taxable__c</fullName>
    <description>Indicates if the Pay Transaction created using this Assignment Rate should have tax applied to the invoice</description>
    <inlineHelpText>Indicates if the Pay Transaction created using this Assignment Rate should have tax applied to the invoice</inlineHelpText>
    <label>Invoice Taxable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>