force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Minimum_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Pay_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Minimum Pay Rate that created this Assignment Rate via the MPR Automation process</description>
    <inlineHelpText>The Minimum Pay Rate that created this Assignment Rate via the MPR Automation process</inlineHelpText>
    <label>Minimum Pay Rate</label>
    <referenceTo>tc9_et__Minimum_Pay_Rate__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>