force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Project Code associated with the Assignment Rate</description>
    <inlineHelpText>The Project Code associated with the Assignment Rate</inlineHelpText>
    <label>Project Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Project_Code__c.RecordType.Name</field>
            <operation>notContain</operation>
            <value>Activity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Assignment Rates</relationshipLabel>
    <relationshipName>Assignment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>