force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__Timesheet_Activity__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To indicate whether the assignment rate is also considered a specific timesheet activity used during interpretation based on the award.</description>
    <inlineHelpText>To indicate whether the assignment rate is also considered a specific timesheet activity used during interpretation based on the award.</inlineHelpText>
    <label>Timesheet Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Project_Code__c.RecordType.Name</field>
            <operation>contains</operation>
            <value>Activity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Assignment Rates (Timesheet Activity)</relationshipLabel>
    <relationshipName>Assignment_Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>