force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_et__To_Be_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__To_Be_Invoiced__c</fullName>
    <description>Indicates if Pay Transaction created using this Assignment Rate should be invoiced</description>
    <inlineHelpText>Indicates if Pay Transaction created using this Assignment Rate should be invoiced</inlineHelpText>
    <label>To Be Invoiced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>