force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Additional_Loading_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Additional_Loading_Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>pay code to be used for automatic creation of additional loading transactions i.e. casual loading</description>
    <inlineHelpText>pay code to be used for automatic creation of additional loading transactions i.e. casual loading</inlineHelpText>
    <label>Additional Loading Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Assignment Rates (Additional Loading Pay Code)</relationshipLabel>
    <relationshipName>Assignment_Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>