force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Amount_per_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Amount_per_Period__c</fullName>
    <description>The calculated amount to be paid in a full Calendar Period</description>
    <inlineHelpText>The calculated amount to be paid in a full Calendar Period</inlineHelpText>
    <label>Amount per Period</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>