force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Archiving_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Archiving_Status__c</fullName>
    <description>A combination of filters for the Assignment Rate automation.</description>
    <inlineHelpText>A combination of filters for the Assignment Rate automation.</inlineHelpText>
    <label>Archiving Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Archiving_Status</valueSetName>
    </valueSet>
</CustomField>