force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Auto_Pay__c</fullName>
    <description>Indicates whether the Amount per Period should be generated automatically when a new Calendar Period is opened during Payrun processing</description>
    <inlineHelpText>Indicates whether the Amount per Period should be generated automatically when a new Calendar Period is opened during Payrun processing</inlineHelpText>
    <label>Auto Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>