force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Auto_Pay_Calculation_Basis__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Auto_Pay_Calculation_Basis__c</fullName>
    <description>Indicates how an auto pay assignment rate will be calculated.  ‘Assignment Rate’ will be based on the auto pay values in the assignment rate, ‘Work Schedule’ will use the actual pattern of work.</description>
    <inlineHelpText>Indicates how an auto pay assignment rate will be calculated.  ‘Assignment Rate’ will be based on the auto pay values in the assignment rate, ‘Work Schedule’ will use the actual pattern of work.</inlineHelpText>
    <label>Auto Pay Calculation Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Auto_Pay_Calculation_Basis</valueSetName>
    </valueSet>
</CustomField>