force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Default_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Default_Pay_Rate__c</fullName>
    <description>Indicates that the record is the primary rate of pay and will be used in the calculation of leave payments</description>
    <inlineHelpText>Indicates that the record is the primary rate of pay and will be used in the calculation of leave payments</inlineHelpText>
    <label>Default Pay Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>