force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Estimated_Payroll_Tax_on_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Estimated_Payroll_Tax_on_Earnings__c</fullName>
    <description>Defines the estimated Payroll Tax that will apply to the Pay Rate.</description>
    <inlineHelpText>Defines the estimated Payroll Tax that will apply to the Pay Rate.</inlineHelpText>
    <label>Estimated Payroll Tax on Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>