force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Estimated_Superannuation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Estimated_Superannuation__c</fullName>
    <description>Defines the estimated Superannuation amount that will be applied to the Pay Rate.</description>
    <inlineHelpText>Defines the estimated Superannuation amount that will be applied to the Pay Rate.</inlineHelpText>
    <label>Estimated Superannuation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>