force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Exclude_From_Auto_Update__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Auto_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked the record will be skipped by the Automatic Status Update scheduled job</description>
    <inlineHelpText>When this box is checked the record will be skipped by the Automatic Status Update scheduled job</inlineHelpText>
    <label>Exclude From Auto Update</label>
    <type>Checkbox</type>
</CustomField>