force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Expire_Combination_Filter__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expire_Combination_Filter__c</fullName>
    <description>Description/Help: A combination of filters for the Assignment Rate automation.</description>
    <inlineHelpText>Description/Help: A combination of filters for the Assignment Rate automation.</inlineHelpText>
    <label>Expire Combination Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>