force-app/main/default/objects/tc9_pr__Assignment_Rate__c/fields/tc9_pr__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expiry_Date__c</fullName>
    <description>The expiry date of the Assignment Rate</description>
    <inlineHelpText>The expiry date of the Assignment Rate</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>